--- a/index.html
+++ b/index.html
@@ -3,33 +3,26 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-<title>AI UNIVERSE Ultra</title>
+<title>AI UNIVERSE</title>
 
+<!-- Tailwind CDN -->
 <script src="https://cdn.tailwindcss.com"></script>
+
+<!-- Marked -->
 <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 
 <style>
 html,body{height:100%;}
-
-body{
-background: radial-gradient(circle at 20% 20%, #1e293b, #0f172a);
-}
-
+body{background:#0f172a;}
 .glass{
-background: rgba(255,255,255,0.05);
-backdrop-filter: blur(20px);
-border: 1px solid rgba(255,255,255,0.1);
+background:rgba(255,255,255,0.05);
+backdrop-filter:blur(10px);
+border:1px solid rgba(255,255,255,0.08);
 }
-
-.neon{
-box-shadow: 0 0 10px #3b82f6, 0 0 20px #3b82f6;
-}
-
 .scrollbar::-webkit-scrollbar{width:6px}
 .scrollbar::-webkit-scrollbar-thumb{
 background:#3b82f6;border-radius:10px;
 }
-
 .typing::after{
 content:'▋';
 animation:blink 1s infinite;
@@ -38,37 +31,37 @@ animation:blink 1s infinite;
 0%,50%,100%{opacity:1}
 25%,75%{opacity:0}
 }
-
 .sidebar-hide{transform:translateX(-100%)}
 </style>
 </head>
 
 <body class="text-white min-h-screen flex">
 
-<div id="loading" class="fixed inset-0 flex items-center justify-center bg-black z-50 text-xl">
-Launching AI UNIVERSE Ultra...
+<!-- Loader -->
+<div id="loading" class="fixed inset-0 flex items-center justify-center bg-black z-50">
+Loading AI UNIVERSE...
 </div>
 
 <!-- Sidebar -->
 <div id="sidebar"
-class="fixed md:static inset-y-0 left-0 w-72 glass sidebar-hide md:translate-x-0 transition-transform duration-300 flex flex-col z-40">
+class="fixed md:static inset-y-0 left-0 w-64 glass sidebar-hide md:translate-x-0 transition-transform duration-300 flex flex-col z-40">
 
-<div class="p-4 flex justify-between items-center border-b border-white/10">
-<h1 class="text-xl font-bold bg-gradient-to-r from-blue-400 to-purple-500 bg-clip-text text-transparent">
-AI UNIVERSE
-</h1>
-<button id="closeSidebar" class="md:hidden text-gray-400">✕</button>
+<div class="p-4 border-b border-white/10 flex justify-between items-center">
+<h1 class="font-bold text-blue-400">AI UNIVERSE</h1>
+<button id="closeSidebar" class="md:hidden">✕</button>
 </div>
 
-<button id="newChatBtn"
-class="m-4 p-3 rounded-xl bg-gradient-to-r from-blue-500 to-purple-600 neon hover:scale-105 transition">
+<button id="newChat"
+class="m-4 p-2 bg-blue-600 rounded-lg hover:bg-blue-700 transition">
 + New Chat
 </button>
 
 <div id="chatList" class="flex-1 overflow-y-auto p-3 space-y-2 scrollbar"></div>
 
-<div class="p-4 border-t border-white/10 space-y-2">
-<button id="settingsBtn" class="w-full text-left text-gray-300 hover:text-white">⚙ Settings</button>
+<div class="p-4 border-t border-white/10">
+<button id="settingsBtn" class="text-gray-300 hover:text-white">
+⚙ Settings
+</button>
 </div>
 
 </div>
@@ -76,10 +69,10 @@ class="m-4 p-3 rounded-xl bg-gradient-to-r from-blue-500 to-purple-600 neon hove
 <!-- Main -->
 <div class="flex-1 flex flex-col min-h-screen">
 
-<!-- Top -->
+<!-- Top Bar -->
 <div class="glass flex items-center justify-between p-4 border-b border-white/10">
-<button id="openSidebar" class="md:hidden text-gray-400">☰</button>
-<h2 class="font-semibold tracking-wide">AI Assistant</h2>
+<button id="openSidebar" class="md:hidden">☰</button>
+<h2 id="chatTitle" class="font-semibold">New Chat</h2>
 </div>
 
 <!-- Messages -->
@@ -88,85 +81,197 @@ class="flex-1 overflow-y-auto p-6 space-y-6 scrollbar"></div>
 
 <!-- Input -->
 <div class="glass p-4 border-t border-white/10">
-<div class="flex gap-3 items-end">
-
-<textarea id="userInput"
-class="flex-1 bg-transparent border border-white/10 rounded-xl p-4 resize-none focus:outline-none focus:ring-2 focus:ring-blue-500"
+<div class="flex gap-3">
+<textarea id="input"
+class="flex-1 bg-transparent border border-white/10 rounded-xl p-3 resize-none focus:outline-none focus:ring-2 focus:ring-blue-500"
 rows="1"
-placeholder="Ask anything..."></textarea>
+placeholder="Type your message..."></textarea>
 
-<button id="sendBtn"
-class="px-6 py-3 rounded-xl bg-gradient-to-r from-blue-500 to-purple-600 neon hover:scale-105 transition">
+<button id="send"
+class="px-6 bg-blue-600 rounded-xl hover:bg-blue-700 transition">
 Send
 </button>
-
 </div>
 </div>
 
+</div>
+
+<!-- Settings Modal -->
+<div id="settingsModal"
+class="fixed inset-0 bg-black/60 hidden items-center justify-center z-50">
+
+<div class="glass p-6 rounded-xl w-96 max-w-full space-y-4">
+<h3 class="font-semibold text-lg">Settings</h3>
+
+<input id="apiKey"
+type="password"
+placeholder="OpenRouter API Key"
+class="w-full p-2 rounded bg-transparent border border-white/10">
+
+<input id="model"
+type="text"
+value="deepseek/deepseek-r1:free"
+class="w-full p-2 rounded bg-transparent border border-white/10">
+
+<div class="flex justify-end gap-3">
+<button id="closeSettings">Cancel</button>
+<button id="saveSettings"
+class="bg-blue-600 px-4 py-2 rounded">Save</button>
+</div>
+</div>
 </div>
 
 <script>
 (function(){
 
+function get(k,d){try{return JSON.parse(localStorage.getItem(k))??d}catch(e){return d}}
+function set(k,v){try{localStorage.setItem(k,JSON.stringify(v))}catch(e){}}
+
+let chats=get("ai_chats",[]);
+let current=get("ai_current",null);
+let apiKey=get("ai_key","");
+let model=get("ai_model","deepseek/deepseek-r1:free");
+
+const messages=document.getElementById("messages");
+const chatList=document.getElementById("chatList");
+const input=document.getElementById("input");
+
+function save(){
+set("ai_chats",chats);
+set("ai_current",current);
+set("ai_key",apiKey);
+set("ai_model",model);
+}
+
+function newChat(){
+const id=Date.now()+"";
+chats.unshift({id,title:"New Chat",messages:[]});
+current=id;
+save();
+renderChats();
+renderMessages();
+}
+
+function currentChat(){
+return chats.find(c=>c.id===current);
+}
+
+function renderChats(){
+chatList.innerHTML="";
+chats.forEach(c=>{
+const d=document.createElement("div");
+d.textContent=c.title;
+d.className="p-2 rounded cursor-pointer hover:bg-white/10";
+if(c.id===current)d.classList.add("bg-white/10");
+d.onclick=()=>{current=c.id;renderChats();renderMessages();save();}
+chatList.appendChild(d);
+});
+}
+
+function renderMessages(){
+messages.innerHTML="";
+const c=currentChat();
+if(!c)return;
+document.getElementById("chatTitle").textContent=c.title;
+c.messages.forEach(m=>addMessage(m.role,m.content,false));
+scrollBottom();
+}
+
 function scrollBottom(){
 messages.scrollTop=messages.scrollHeight;
 }
 
-const messages=document.getElementById("messages");
-const userInput=document.getElementById("userInput");
-
-/* Simple Chat */
 function addMessage(role,text,typing){
 const wrap=document.createElement("div");
 wrap.className=role==="user"?"text-right":"text-left";
 
 const bubble=document.createElement("div");
-bubble.className="inline-block max-w-2xl px-5 py-4 rounded-2xl shadow-lg";
-
+bubble.className="inline-block max-w-2xl px-4 py-3 rounded-xl";
 if(role==="user"){
-bubble.classList.add("bg-gradient-to-r","from-blue-500","to-purple-600");
+bubble.classList.add("bg-blue-600");
 }else{
 bubble.classList.add("glass");
 }
-
 if(typing)bubble.classList.add("typing");
-
 bubble.innerHTML=marked.parse(text);
-
 wrap.appendChild(bubble);
 messages.appendChild(wrap);
 scrollBottom();
 return bubble;
 }
 
-async function fakeAIResponse(text){
-const bubble=addMessage("assistant","",true);
-let i=0;
-const reply="This is AI UNIVERSE Ultra interface.\n\nYou said:\n"+text;
-const interval=setInterval(()=>{
-bubble.innerHTML=marked.parse(reply.slice(0,i));
-i++;
-if(i>reply.length){
-clearInterval(interval);
-bubble.classList.remove("typing");
-}
-},15);
-}
-
-document.getElementById("sendBtn").onclick=()=>{
-const text=userInput.value.trim();
+async function sendMessage(){
+const text=input.value.trim();
 if(!text)return;
-addMessage("user",text,false);
-userInput.value="";
-fakeAIResponse(text);
-};
+if(!apiKey){alert("Add API key in settings");return;}
 
-userInput.addEventListener("keydown",e=>{
-if(e.key==="Enter"&&!e.shiftKey){
-e.preventDefault();
-document.getElementById("sendBtn").click();
+const c=currentChat();
+c.messages.push({role:"user",content:text});
+addMessage("user",text,false);
+input.value="";
+save();
+
+const assistant={role:"assistant",content:""};
+c.messages.push(assistant);
+const bubble=addMessage("assistant","",true);
+
+try{
+const res=await fetch("https://openrouter.ai/api/v1/chat/completions",{
+method:"POST",
+headers:{
+"Authorization":"Bearer "+apiKey,
+"Content-Type":"application/json"
+},
+body:JSON.stringify({
+model:model,
+messages:c.messages,
+stream:true
+})
+});
+
+if(!res.body) throw new Error("No response body");
+
+const reader=res.body.getReader();
+const decoder=new TextDecoder();
+
+while(true){
+const {value,done}=await reader.read();
+if(done)break;
+const chunk=decoder.decode(value);
+chunk.split("\n").forEach(line=>{
+if(line.startsWith("data:")){
+const data=line.replace("data:","");
+if(data===" [DONE]")return;
+try{
+const json=JSON.parse(data);
+const token=json.choices?.[0]?.delta?.content;
+if(token){
+assistant.content+=token;
+bubble.innerHTML=marked.parse(assistant.content);
+scrollBottom();
+}
+}catch(e){}
 }
 });
+}
+
+bubble.classList.remove("typing");
+save();
+
+}catch(e){
+bubble.innerHTML="Error: "+e.message;
+}
+}
+
+document.getElementById("send").onclick=sendMessage;
+input.addEventListener("keydown",e=>{
+if(e.key==="Enter"&&!e.shiftKey){
+e.preventDefault();
+sendMessage();
+}
+});
+
+document.getElementById("newChat").onclick=newChat;
 
 /* Sidebar */
 document.getElementById("openSidebar").onclick=()=>{
@@ -176,12 +281,23 @@ document.getElementById("closeSidebar").onclick=()=>{
 document.getElementById("sidebar").classList.add("sidebar-hide");
 };
 
-/* New Chat */
-document.getElementById("newChatBtn").onclick=()=>{
-messages.innerHTML="";
+/* Settings */
+document.getElementById("settingsBtn").onclick=()=>{
+document.getElementById("settingsModal").classList.remove("hidden");
+};
+document.getElementById("closeSettings").onclick=()=>{
+document.getElementById("settingsModal").classList.add("hidden");
+};
+document.getElementById("saveSettings").onclick=()=>{
+apiKey=document.getElementById("apiKey").value.trim();
+model=document.getElementById("model").value.trim();
+save();
+document.getElementById("settingsModal").classList.add("hidden");
 };
 
-/* Hide loader */
+if(!current||!currentChat())newChat();
+renderChats();
+renderMessages();
 document.getElementById("loading").style.display="none";
 
 })();
